--- a/app/views/product/product-placing-page.html.haml
+++ b/app/views/product/product-placing-page.html.haml
@@ -5,101 +5,124 @@
   .main 
     .info-container
       %h2.content-header 
-      商品の情報を入力
+        商品の情報を入力
       .sell-forms
         .product-image
-          %h3.product-image-header 出品画像
-            %span.require 必須
+          .product-image-header
+            出品画像
+            .require
+              必須
           %p 最大10枚までアップロードできます
           .dropbox
-            %input{type: "file"}>/, class= "input-box">
-            %pre.texts ドロッグアンドドロップ
-            またはクリックしてファイルをアップロード
+            %input{type: "file", class: "input-box", style: "/* display: none; */"}
+              .texts
+                %p
+                  ドロッグアンドドロップ
+                %p
+                  またはクリックしてファイルをアップロード
         .product-contents
           .product-name 
-            %label 商品名
-              %span.require 必須
-            .input__product-name
-              %input.product-name__defauld{name: "product-name", placeholder: "商品名（必須40文字まで）", type: "product-name", value: ""}/
+            .product-name-header
+              -# ↑追加
+              %label 商品名
+              .require 必須
+            %input.product-name__defauld{name: "product-name", placeholder: "商品名（必須40文字まで）", type: "product-name", value: ""}/
           .product-description
-            %label 商品の説明
-              %span.require 必須
-            %textarea.description{placeholder: "商品の説明（必須1,000字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", rows: "5"}
+            .product-description-header
+              -# ↑追加
+              %label 商品の説明
+              .require 必須
+            .description
+              %textarea.description__box{placeholder: "商品の説明（必須1,000字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", rows: "5"}
           .product-details
             %h3.sub-header 商品の詳細
             .product-detail
               .category
-                %label カテゴリー
-                  %span.require 必須
-                  .select-box
-                    %i.fas.fa-republican
-                    %select.select-default{name: "category"}
-                      %option{selected: "selected"} --
+                .category__nav
+                  -# ↑dfのため追加
+                  %label カテゴリー
+                  .require 必須
+                .select-box
+                  %i.fas.fa-republican
+                  %select.select-default{name: "category"}
+                    %option{selected: "selected"} --
               .condition
-                %label 商品の状態
-                  %span.require 必須
-                    %i.fas.fa-republican
-                    %select.select-default{name: "condition"}
-                      %option{selected: "selected"} --
-                    .product-details
-            %h3.sub-header 配送について
-            = link_to "?", "https://www.mercari.com/jp/help_center/article/68/", class: "link"
+                .condition__nav
+                  %label 商品の状態
+                  .require 必須
+                %i.fas.fa-republican
+                  %select.select-default{name: "condition"}
+                    %option{selected: "selected"} --
+                  .product-details
+          .product-transportation
+            -# ↑追加
+            .product-transportation__nav
+              %h3.sub-header 配送について
+              = link_to "?", "https://www.mercari.com/jp/help_center/article/68/", class: "link"
             .transportation-detail
-              .transportation-fee
+              .transportation-name
                 %label 配送料の負担
-                  %span.require 必須
-                  .select-box
-                    %i.fas.fa-republican
-                    %select.select-default{name: "scope"}
-                      %option{selected: "selected"} --
-              .region
+                .require
+                  必須
+              .select-box
+                %i.fas.fa-republican
+                %select.select-default{name: "scope"}
+                  %option{selected: "selected"} --
+              .transportation-name
                 %label 発送元の地域
-                  %span.require 必須
-                    %i.fas.fa-republican
-                    %select.select-default{name: "region"}
-                      %option{selected: "selected"} --
-              .delivery
+                .require
+                  必須
+              .select-box
+                %i.fas.fa-republican
+                %select.select-default{name: "region"}
+                  %option{selected: "selected"} --
+              .transportation-name
                 %label 発送までの日数
-                  %span.require 必須
-                    %i.fas.fa-republican
-                    %select.select-default{name: "delivery time"}
-                      %option{selected: "selected"} --
+                .require
+                  必須
+              .select-box
+                %select.select-default{name: "delivery time"}
+                  %option{selected: "selected"} --
+              -# 合わせてCSSを適応するためクラス名を統一
+          .price
+            .price__nav
               %h3.sub-header 販売価格(300〜9,999,999)
               = link_to "?", "https://www.mercari.com/jp/help_center/article/64/", class: "link"
-              .transportation-detail
-                .product-price
+            .transportation-detail
+              .product-price
+                .product-price__nav
                   %label.left 価格
-                    %span.require 必須
+                  .right
+                    .require 必須
+                .product-price__box
                   %label.right ¥
-                  .input__product-price
-                    %input.product-price__default{name: "product-price", placeholder: "例）300", type: "product-price", value: ""}/
-                  .comission
-                    .left 販売手数料 (10%)
-                    .right -
-                  .profit
-                    .left 販売利益
-                    .right -
-              .btn-box
-                .agreement
-                  %p.check-items 
-                    = link_to "禁止されている出品", "https://www.mercari.com/jp/help_center/getting_started/prohibited_items/"
-                    、
-                    = link_to "行為", "https://www.mercari.com/jp/help_center/getting_started/prohibited_conduct/"
-                    を必ずご確認ください。
-                  %p.check-items
-                    またブランド品でシリアルナンバー等がある場合はご記載ください。
-                    = link_to "偽ブランドの販売", "https://www.mercari.com/jp/help_center/getting_started/counterfeit_goods/"
-                    は犯罪であ
-                  %p.check-items
-                    り処罰される可能性があります。
-                  %p.check-items
-                    また、出品をもちまして
-                    = link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
-                    に同意したことになります。
-                  .btn-box
-                    %button{type: "submit"} , class: "submit-button"
-                    出品する
-                    = link_to "もどる", "https://www.mercari.com/jp/"
+                  %input.product-price__default{name: "product-price", placeholder: "例）300", type: "product-price", value: ""}/
+              .comission
+                .left 販売手数料 (10%)
+                .right -
+              .profit
+                .left 販売利益
+                .right -
+          .btn-box
+            .agreement
+              %p.check-items 
+                = link_to "禁止されている出品", "https://www.mercari.com/jp/help_center/getting_started/prohibited_items/"
+                、
+                = link_to "行為", "https://www.mercari.com/jp/help_center/getting_started/prohibited_conduct/"
+                を必ずご確認ください。
+              %p.check-items
+                またブランド品でシリアルナンバー等がある場合はご記載ください。
+                = link_to "偽ブランドの販売", "https://www.mercari.com/jp/help_center/getting_started/counterfeit_goods/"
+                は犯罪であ
+              %p.check-items
+                り処罰される可能性があります。
+              %p.check-items
+                また、出品をもちまして
+                = link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
+                に同意したことになります。
+            .sell-btn
+              %button{type: "submit", class: "submit-button"} 出品する
+            = link_to "もどる", "https://www.mercari.com/jp/", class: "back-btn"
   .footer 
     .links
       %ul
@@ -114,4 +137,3 @@
       %a{href: "https://www.mercari.com/jp/", target: "_blank"}
         %img{alt: "", height: "40", src: "/fmarket_logo_white", class: "mercari"}/
     %p.copyright © 2019 Mercari
-    
