--- a/app/views/product/product-placing-page.html.haml
+++ b/app/views/product/product-placing-page.html.haml
@@ -134,6 +134,5 @@
           = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
     -# link_to top page
     .bottom-footer__logo
-      %a{href: "https://www.mercari.com/jp/", target: "_blank"}
-        %img{alt: "", height: "40", src: "/fmarket_logo_white", class: "mercari"}/
+      = link_to image_tag("SVG/fmarket_logo_white", height: "30", class: "mercari"), "https://www.mercari.com/jp/"
     %p.copyright © 2019 Mercari
