--- a/app/assets/stylesheets/signup6.scss
+++ b/app/assets/stylesheets/signup6.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    @include bodyTemp();
+    @include bodyTemp;
     .last-box{
       height: 438px;
       width: 700px;
