--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -3,17 +3,48 @@
   width: 700px;
   float: right;
   .user {
-    padding: 20px;
     height: 200px;
+    padding: 20px;
     text-align: center;
+    background-image: url("/Italy.jpeg");
+    background-repeat: no-repeat;
     background-size: cover;
-    font-size: 14px;
-    &__icon {
-      width: 60px;
-      height: 60px;
+    position: relative;
+    .thumbnail {
+      display: block;
+      top: 50%;
+      left: 0;
+      right:0;
+      transform: translate(0, -50%);
+      color: #333;
+      position: absolute;
+      .icon {
+        width: 60px;
+        height: 60px;
+        overflow: hidden;
+        margin: 0 auto;
+        border-radius: 50%;
+      }
+      h2 {
+        font-size: 14px;
+        font-weight: bold;
+        margin-top: 8px;
+      }
+      .records {
+        font-size: 16px;
+        margin-top: 8px;
+        div {
+          display: inline-block;
+          font-size: 14px;
+        }
+        span {
+          font-weight: bold;
+          margin-left: 8px;
+        }
+      }
     }
-    &__records {
-      margin-top: 8px;
+    .thumbnail:hover {
+      opacity: 0.7;
     }
   }
   .info {
@@ -28,23 +59,19 @@
         height: 74px;
         line-height: 74px;
       }
-      li:first-child {
-        background-color: #fff;
-        border-top: 2px solid #ea352d;
-      }
-      a {
-        text-decoration: none;
+      h3 {
         color: #333;
         font-weight: bold;
       }
-      a:hover {
+      h3:hover {
         color: #888;
+        background-color: #fff;
+        border-top: 2px solid #ea352d;
       }
     }
   }
   .message {
     .messages {
-      //display: block;
       li {
         position: relative;
         border-bottom: 1px solid #eee;
@@ -52,9 +79,7 @@
       li:hover {
         background-color: #fafafa;
       }
-        a {
-          min-height: 80px;
-          color: #333;
+        .link {
           text-decoration: none;
           .form {
             margin: 0 40px 0 68px;
@@ -81,6 +106,13 @@
       background-color: #eee;
       text-align: center;
       font-size: 14px;
+      height: 56px;
+      line-height: 56px;
+      .detail {
+        text-decoration: none;
+        color: #333;
+        display: block;
+      }
     }
     .all:hover{
       background-color: #fafafa;
@@ -105,17 +137,14 @@
         height: 74px;
         line-height: 74px;
       }
-      li:first-child {
-        background-color: #fff;
-        border-top: 2px solid #ea352d;
-      }
-      a {
-        text-decoration: none;
+      h3 {
         color: #333;
         font-weight: bold;
       }
-      a:hover {
+      h3:hover {
         color: #888;
+        background-color: #fff;
+        border-top: 2px solid #ea352d;
       }
     }
     &__messages {
@@ -134,15 +163,15 @@
     }
   }
 }
+
 .figure {
   background-color: #eee;
   width: 48px;
   height: 48px;
   float: left;
-  overflow: hidden;
   .box{
     width: 70%;
     margin-top: 5px;
-    margin-left: 6px;
+    margin-left: 7px;
   }
 }
