--- a/app/views/mypage/mypage.html.haml
+++ b/app/views/mypage/mypage.html.haml
@@ -1,48 +1,52 @@
 .main
-  %section.user
-    %a{ href: "#" }
-    %img.user__icon{ href: "#", src: "assets/106_h_24.png" }
+  .user
+    .thumbnail
+      = link_to ""
+      .icon
+        =image_tag "/ramen.jpg"
       %h2 SRB
-    .user__records
-      %span 評価 0 出品数 0
+      .records
+        %div
+          評価
+          %span 0
+        %div
+          出品数
+          %span 0
 
   .info
     %ul.info__tabs
       %li
         %h3
-          %a{ href: "#" }
-            お知らせ
+          お知らせ
       %li
         %h3
-          %a{ href: "#" }
-            やることリスト
+          やることリスト
     .message
       %ul.messages
         %li
-          %a{ href: "#" }
+          = link_to "", class: "link" do
             .figure
-              %img.box{ src: "assets/logo_red.svg" }
+              = image_tag "/logo_red.svg", class: "box"
             .form
               .form__text
                 <お買い物応援!> ¥1,000の商品を実質1円でご購入いただけます！
               .form__time
-                %i.fa.fa-clock-o 22時間前
+                %i.fa.fa-clock-o 3日前
             .chevron
               %i.fa.fa-chevron-right
         %li
-          %a{ href: "#" }
+          = link_to "", class: "link" do
             .figure
-              %img.box{ src: "assets/logo_red.svg" }
+              = image_tag "/logo_red.svg", class: "box"
             .form
               .form__text
-                <お買い物応援!> ¥1,000の商品を実質1円でご購入いただけます！
+                明日、P999還元クーポンの有効期限が切れます！タップして詳細を確認しましょう。
               .form__time
-                %i.fa.fa-clock-o 22時間前
+                %i.fa.fa-clock-o 5日前
             .chevron
               %i.fa.fa-chevron-right
-        %li.all
-          %a{ href: "#" }
-            一覧を見る
+        .all
+          = link_to "一覧を見る", "", class: "detail"
 
   .product
     .product__header
@@ -50,12 +54,10 @@
     %ul.product__tabs
       %li
         %h3
-          %a{ href: "#" }
-            取引中
+          取引中
       %li
         %h3
-          %a{ href: "#" }
-            過去の取引
+          過去の取引
     .product__messages
       %ul.trades
         %li
