--- a/app/assets/stylesheets/pw-resetting.scss
+++ b/app/assets/stylesheets/pw-resetting.scss
@@ -20,7 +20,95 @@
       }
     }
   .container {
-
+    height: 100%;
+    width: 100%;
+    .main {
+      margin: 0 auto;
+      width: 700px;
+      .upper-header {
+        width: 100%;
+        font-size: 22px;
+        padding: 32px 16px;
+        font-weight: bold;
+        border-bottom: 1px solid #eee;
+      }
+      .resetting-box {
+        .email {
+          width: 320px;
+          height: 114px;
+          label {
+            height: 48px;
+            width: 328px;
+            margin-bottom: 24px;
+          }
+          .email-address {
+            height: 48px;
+            width: 318px;
+            font-size: 16px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            line-height: 1.5;
+            background-color: #fff;
+            padding-left: 10px;
+          }
+        }
+        .robot {
+          .recaptcha {
+            width: 304px;
+            height: 78px;
+            background: azure;
+            border-radius: 2px;
+            float: left;
+            .left-side {
+              float: left;
+              display: flex;
+              margin-top: 15px;
+              .robot-check {
+                width: 30px;
+              }
+              .im-not-a-robot {
+                font-size: 15px;
+                text-align: left;
+                width: 150px;
+              }
+            }
+            .right-side {
+              margin-top: 5px;
+              .robot-logo {
+                height: 40px;
+                width: 40px;
+                text-align: right;
+                color: lightseagreen;
+                margin-left: 40px;
+              }
+              .logo-name {
+                color: #333;
+                font-size: 10px;
+                margin-left: 210px;
+              }
+              .links {
+                display: flex;
+                font-size: smaller;
+                margin-right: 2px;
+                .link {
+                  text-decoration: none;
+                  color: #333;
+                }
+              }
+            }
+          }
+        }
+        .submit {
+          width: 328px;
+          height: 50px;
+          background: #ea352d;
+          color: #fff;
+          border: 1px solid #ea352d;
+          margin: 24px 0 40px;
+          font-size: 14px;
+        }
+      }
+    }
   }
   .body-foot{
     margin:0 auto;
