--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,8 @@
 @import "header";
 @import "footer";
 @import "home";
+@import "profile";
+@import "side-barMypage";
+@import "user_info_register";
+@import "clearfix";
 @import "mixin-signup";
