--- a/app/assets/stylesheets/user/card-registration.scss
+++ b/app/assets/stylesheets/user/card-registration.scss
@@ -1,6 +1,6 @@
 @import "mixin-signup";
 @media screen and (min-width: 768px){
-  .body{
+  .body-side{
     @include bodyTemp;
     .parent {
       display: flex;
