--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -1,116 +1,116 @@
-.body
-  .main
-    .slide
-    .nav
-      .Category
-        人気のカテゴリー
-      %ul.Categorys
-        %li
-          =link_to "レディース", class: "Categorys__list--item"
-        %li
-          =link_to "メンズ", class: "Categorys__list--item"
-        %li
-          =link_to "家電・スマホ・カメラ", class: "Categorys__list--item"
-        %li
-          =link_to "おもちゃ・ホビー・グッズ", class: "Categorys__list--item"
-    .main-content
-      .main-contents
-        .main-contents__top
-          .main-contents__header--name
-            レディース新着アイテム
-          =link_to "もっと見る ＞", class: "main-contents__header--more"
-        .main-contents__goods
-          %ul
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-        .main-contents__header
-          .main-contents__header--name
-            メンズ新着アイテム
-          =link_to "もっと見る ＞", class: "main-contents__header--more"
-        .main-contents__goods
-          %ul
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-        .main-contents__header
-          .main-contents__header--name
-            家電・スマホ・カメラ新着アイテム
-          =link_to "もっと見る ＞", class: "main-contents__header--more"
-        .main-contents__goods
-          %ul
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
-        .main-contents__header
-          .main-contents__header--name
-            おもちゃ・ホビー・グッズ新着アイテム
-          =link_to "もっと見る ＞", class: "main-contents__header--more"
-        .main-contents__goods
-          %ul
-            %li
-              .main-contents-box
-                %a.contents-item{href: "#"}
-                  .contents-item__image
-                    .contents-item__image--price
-                      %span ¥1,000
-                  .contents-item__index
-                    .contents-item__index--name 
-                      %span テスト
+= render 'layouts/header'
+.main
+  .slide
+  .nav
+    .Category
+      人気のカテゴリー
+    %ul.Categorys
+      %li
+        =link_to "レディース", class: "Categorys__list--item"
+      %li
+        =link_to "メンズ", class: "Categorys__list--item"
+      %li
+        =link_to "家電・スマホ・カメラ", class: "Categorys__list--item"
+      %li
+        =link_to "おもちゃ・ホビー・グッズ", class: "Categorys__list--item"
+  .main-content
+    .main-contents
+      .main-contents__top
+        .main-contents__header--name
+          レディース新着アイテム
+        =link_to "もっと見る ＞", class: "main-contents__header--more"
+      .main-contents__goods
+        %ul
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+      .main-contents__header
+        .main-contents__header--name
+          メンズ新着アイテム
+        =link_to "もっと見る ＞", class: "main-contents__header--more"
+      .main-contents__goods
+        %ul
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+      .main-contents__header
+        .main-contents__header--name
+          家電・スマホ・カメラ新着アイテム
+        =link_to "もっと見る ＞", class: "main-contents__header--more"
+      .main-contents__goods
+        %ul
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
+      .main-contents__header
+        .main-contents__header--name
+          おもちゃ・ホビー・グッズ新着アイテム
+        =link_to "もっと見る ＞", class: "main-contents__header--more"
+      .main-contents__goods
+        %ul
+          %li
+            .main-contents-box
+              %a.contents-item{href: "#"}
+                .contents-item__image
+                  .contents-item__image--price
+                    %span ¥1,000
+                .contents-item__index
+                  .contents-item__index--name 
+                    %span テスト
 
 
 
